aws/SecurityGroups-sa-east-1.json
{
 "SecurityGroups": [
  {
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "Description": "default VPC security group", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [], 
     "UserIdGroupPairs": [
      {
       "UserId": "118292266645", 
       "GroupId": "sg-8a0d70ef"
      }
     ], 
     "Ipv6Ranges": []
    }
   ], 
   "GroupName": "default", 
   "VpcId": "vpc-dff0b8ba", 
   "OwnerId": "118292266645", 
   "GroupId": "sg-8a0d70ef"
  }
 ]
}
